# ai-product-imagery

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py  workflow.py
backend/app/api/: routes.py
backend/app/models/: state.py
backend/app/nodes/: enhancement.py  product_identification.py  segmentation.py  video_processing.py
backend/app/services/: gemini_service.py  huggingface_service.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/process/[jobId]/: page.tsx
frontend/src/app/results/[jobId]/: page.tsx
frontend/src/components/ui/: alert.tsx
